[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "cudaq-solvers"
dynamic = ["version"]
description = "Accelerated libraries for quantum-classical solvers built on CUDA-Q"
authors = [{name = "NVIDIA Corporation & Affiliates"}]
maintainers = [{name = "NVIDIA Corporation & Affiliates"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  'cuda-quantum-cu12 >= 0.12',
  'fastapi',
  'networkx',
  'pyscf',
  'scipy',
  'uvicorn',
]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
]

[project.urls]
Homepage = "https://nvidia.github.io/cudaqx"
Documentation = "https://nvidia.github.io/cudaqx/components/solvers/introduction.html"
Repository = "https://github.com/NVIDIA/cudaqx"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build-dir = "_skbuild"
build.verbose = true
cmake.version = ">=3.28"
cmake.build-type = "Release"
install.components = ["solvers-python", "solvers-lib", "solvers-tools"]
wheel.packages = []
logging.level = "DEBUG"
ninja.version = ">=1.10"

[tool.scikit-build.cmake.define]
CUDAQX_SOLVERS_INCLUDE_TESTS = false
CUDAQX_SOLVERS_BINDINGS_PYTHON = true

[tool.setuptools_scm]
write_to = "_version.py"

[project.optional-dependencies]
gqe = [
  'torch>=2.0.0',
  'lightning>=2.0.0',
  'ml_collections>=0.1.0',
  'mpi4py>=3.1.0',
  'transformers>=4.30.0',
]